--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,7 +41,7 @@ h6 {
   visibility: hidden;
   opacity: 0;
   right: 15px;
-  bottom: 15px;
+  bottom: 65px;
   z-index: 996;
   background: #149ddd;
   width: 40px;
@@ -241,7 +241,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.jpg") top center;
+  background: url("../img/hero-bg.png") top center;
   background-size: cover;
 }
 
@@ -807,6 +807,7 @@ section {
   background: #fff;
   position: relative;
   margin-bottom: 35px;
+  min-height: 276px;
   border-radius: 6px;
   box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
 }
@@ -1075,13 +1076,13 @@ section {
 # Footer
 --------------------------------------------------------------*/
 #footer {
-  padding: 15px;
+  padding: 0px;
   color: #f4f6fd;
   font-size: 14px;
   position: fixed;
   left: 0;
   bottom: 0;
-  width: 300px;
+  width: 100%;
   z-index: 9999;
   background: #040b14;
 }
