--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,41 +1,21 @@
-/**
-* Template Name: iPortfolio
-* Updated: Jan 29 2024 with Bootstrap v5.3.2
-* Template URL: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
 
-/*--------------------------------------------------------------
-# General
---------------------------------------------------------------*/
+/* # General */
 body {
   font-family: "Open Sans", sans-serif;
   color: #272829;
 }
-
 a {
   color: #149ddd;
   text-decoration: none;
 }
-
 a:hover {
   color: #37b3ed;
   text-decoration: none;
 }
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1,h2,h3,h4,h5,h6 {
   font-family: "Raleway", sans-serif;
 }
-
-/*--------------------------------------------------------------
-# Back to top button
---------------------------------------------------------------*/
+/* # Back to top button */
 .back-to-top {
   position: fixed;
   visibility: hidden;
@@ -49,26 +29,20 @@ h6 {
   border-radius: 50px;
   transition: all 0.4s;
 }
-
 .back-to-top i {
   font-size: 28px;
   color: #fff;
   line-height: 0;
 }
-
 .back-to-top:hover {
   background: #2eafec;
   color: #fff;
 }
-
 .back-to-top.active {
   visibility: visible;
   opacity: 1;
 }
-
-/*--------------------------------------------------------------
-# Header
---------------------------------------------------------------*/
+/* # Header */
 #header {
   position: fixed;
   top: 0;
@@ -82,14 +56,12 @@ h6 {
   background: #040b14;
   overflow-y: auto;
 }
-
 #header .profile img {
   margin: 15px auto;
   display: block;
   width: 120px;
   border: 8px solid #2c2f3f;
 }
-
 #header .profile h1 {
   font-size: 24px;
   margin: 0;
@@ -99,13 +71,10 @@ h6 {
   text-align-last: center;
   font-family: "Poppins", sans-serif;
 }
-
-#header .profile h1 a,
-#header .profile h1 a:hover {
+#header .profile h1 a, #header .profile h1 a:hover {
   color: #fff;
   text-decoration: none;
 }
-
 #header .profile .social-links a {
   font-size: 18px;
   display: inline-block;
@@ -120,28 +89,22 @@ h6 {
   height: 36px;
   transition: 0.3s;
 }
-
 #header .profile .social-links a:hover {
   background: #149ddd;
   color: #fff;
   text-decoration: none;
 }
-
 #main {
   margin-left: 300px;
 }
-
-.container,
-.container-fluid {
+.container, .container-fluid {
   padding-left: 30px;
   padding-right: 30px;
 }
-
 @media (max-width: 1199px) {
   #header {
     left: -300px;
   }
-
   #main {
     margin-left: 0;
   }
@@ -152,15 +115,11 @@ h6 {
     padding-right: 12px;
   }
 }
-
-/*--------------------------------------------------------------
-# Navigation Menu
---------------------------------------------------------------*/
+/* # Navigation Menu */
 /* Desktop Navigation */
 .nav-menu {
   padding: 30px 0 0 0;
 }
-
 .nav-menu * {
   margin: 0;
   padding: 0;
@@ -241,7 +200,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.png") top center;
+  background: url("../img/hero-bg.png") top right;
   background-size: cover;
 }
 
@@ -268,6 +227,7 @@ h6 {
   font-weight: 700;
   line-height: 56px;
   color: #fff;
+  text-align: center;
 }
 
 #hero p {
@@ -275,6 +235,7 @@ h6 {
   margin-bottom: 50px;
   font-size: 26px;
   font-family: "Poppins", sans-serif;
+  text-align: center;
 }
 
 #hero p span {
@@ -912,108 +873,13 @@ section {
   color: #fff;
 }
 
-.contact .info .email:hover i,
-.contact .info .address:hover i,
-.contact .info .phone:hover i {
-  background: #149ddd;
-  color: #fff;
+.contact .info {
+    padding: 30px;
+    background: #fff;
+    width: 100%;
+    box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.12);
 }
 
-.contact .php-email-form {
-  width: 100%;
-  padding: 30px;
-  background: #fff;
-  box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.12);
-}
-
-.contact .php-email-form .form-group {
-  padding-bottom: 8px;
-}
-
-.contact .php-email-form .validate {
-  display: none;
-  color: red;
-  margin: 0 0 15px 0;
-  font-weight: 400;
-  font-size: 13px;
-}
-
-.contact .php-email-form .error-message {
-  display: none;
-  color: #fff;
-  background: #ed3c0d;
-  text-align: left;
-  padding: 15px;
-  font-weight: 600;
-}
-
-.contact .php-email-form .error-message br+br {
-  margin-top: 25px;
-}
-
-.contact .php-email-form .sent-message {
-  display: none;
-  color: #fff;
-  background: #18d26e;
-  text-align: center;
-  padding: 15px;
-  font-weight: 600;
-}
-
-.contact .php-email-form .loading {
-  display: none;
-  background: #fff;
-  text-align: center;
-  padding: 15px;
-}
-
-.contact .php-email-form .loading:before {
-  content: "";
-  display: inline-block;
-  border-radius: 50%;
-  width: 24px;
-  height: 24px;
-  margin: 0 10px -6px 0;
-  border: 3px solid #18d26e;
-  border-top-color: #eee;
-  animation: animate-loading 1s linear infinite;
-}
-
-.contact .php-email-form .form-group {
-  margin-bottom: 15px;
-}
-
-.contact .php-email-form label {
-  padding-bottom: 8px;
-}
-
-.contact .php-email-form input,
-.contact .php-email-form textarea {
-  border-radius: 0;
-  box-shadow: none;
-  font-size: 14px;
-}
-
-.contact .php-email-form input {
-  height: 44px;
-}
-
-.contact .php-email-form textarea {
-  padding: 10px 15px;
-}
-
-.contact .php-email-form button[type=submit] {
-  background: #149ddd;
-  border: 0;
-  padding: 10px 24px;
-  color: #fff;
-  transition: 0.4s;
-  border-radius: 4px;
-}
-
-.contact .php-email-form button[type=submit]:hover {
-  background: #37b3ed;
-}
 
 @keyframes animate-loading {
   0% {
